# strategy-tester

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: main.py  sheets.py
src/pages/: index.html
